<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_tittle"
        app:showAsAction="withText|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/sort_by"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_due"
                android:title="@string/sort_by_due" />
            <item
                android:id="@+id/sort_assigned"
                android:title="@string/sort_by_assigned" />
            <item
                android:id="@+id/sort_completion"
                android:title="@string/sort_by_progress" />
        </menu>
    </item>
    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_listed_task" />
    <item
        android:id="@+id/delete_all_records"
        android:title="@string/delete_all_task" />
</menu>