<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/toDoFragment"
        android:title="@string/to_do"
        android:icon="@drawable/ic_assignment_assigned"/>

    <item android:id="@+id/missingFragment"
        android:title="@string/over_due"
        android:icon="@drawable/ic_assignment_missing"/>

    <item android:id="@+id/add_task"
        android:title="@string/new_task"
        android:enabled="false"/>

    <item android:id="@+id/doneFragment"
        android:title="@string/done"
        android:icon="@drawable/ic_assignment_done"/>

    <item android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

</menu>