<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/colorSurface"
    tools:context=".ui.fragments.AddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:menu="@menu/add_menu"
            app:navigationIcon="@drawable/ic_close"
            app:title="Hello" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            app:placeholderText="@string/placeholder_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/due_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_layout"
            android:layout_marginTop="6dp"
            android:hint="@string/hint_due"
            app:placeholderText="@string/placeholder_due"
            app:startIconDrawable="@drawable/ic_calender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:inputType="text"
                android:focusable="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/due_layout"
            android:layout_marginTop="6dp"
            android:hint="@string/hint_description"
            app:placeholderText="@string/placeholder_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="8dp"
            android:background="?android:attr/dividerHorizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_task_header"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/create_new_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_outlined_add" />

            <ImageButton
                android:id="@+id/delete_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null"

                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_remove_circle" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_task_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:stackFromEnd="true"
            tools:listitem="@layout/editable_sub_task_item" />

    </RelativeLayout>
</RelativeLayout>