<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface"
    android:transitionName="@string/view_description"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/top_layout"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="?android:homeAsUpIndicator"
            app:menu="@menu/view_menu"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            tools:title="Hello" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="DateFormat is used to convert Strings to Dates (parse()) or Dates to Strings (format()). You are using it to parse the String representation of a Date back to a Date. This can't be right, can it?" />

        <TextView
            android:id="@+id/due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            tools:text="Due on: 30-Dec-21" />

        <Button
            android:id="@+id/mark_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/due"
            android:layout_centerHorizontal="true"
            android:background="@drawable/fill_btn"
            android:text="@string/mark_as_done" />
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/divider"
            android:gravity="center"
            android:background="?android:attr/dividerHorizontal"
            android:layout_below="@id/mark_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/sub_task_header"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_task_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:stackFromEnd="true"
            tools:listitem="@layout/subtask_item" />

    </RelativeLayout>
</RelativeLayout>